<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pivot.myandroiddemo.fragment.NewsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tab_news_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/dimens_mid"
            android:paddingBottom="@dimen/dimens_mid"
            android:gravity="center"
            android:text="@string/news_tab_top"
            android:textSize="@dimen/text_size_normal"/>
        <TextView
            android:id="@+id/tab_news_sport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/dimens_mid"
            android:paddingBottom="@dimen/dimens_mid"
            android:gravity="center"
            android:text="@string/news_tab_sport"
            android:textSize="@dimen/text_size_normal"/>
        <TextView
            android:id="@+id/tab_news_entertainment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/dimens_mid"
            android:paddingBottom="@dimen/dimens_mid"
            android:gravity="center"
            android:text="@string/news_tab_entertainment"
            android:textSize="@dimen/text_size_normal"/>
        <TextView
            android:id="@+id/tab_news_internal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/dimens_mid"
            android:paddingBottom="@dimen/dimens_mid"
            android:gravity="center"
            android:text="@string/news_tab_internal"
            android:textSize="@dimen/text_size_normal"/>
        <TextView
            android:id="@+id/tab_news_technology"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/dimens_mid"
            android:paddingBottom="@dimen/dimens_mid"
            android:gravity="center"
            android:text="@string/news_tab_technology"
            android:textSize="@dimen/text_size_normal"/>
        <TextView
            android:id="@+id/tab_news_international"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/dimens_mid"
            android:paddingBottom="@dimen/dimens_mid"
            android:gravity="center"
            android:text="@string/news_tab_international"
            android:textSize="@dimen/text_size_normal"/>
    </LinearLayout>
    <com.zcolin.gui.ZBanner
        android:id="@+id/news_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp" />
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/layout_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.zcolin.gui.zrecyclerview.ZRecyclerView
            android:id="@+id/news_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>
