<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.pivot.myandroiddemo.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens_small"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimens_small">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_mid"
                android:layout_marginRight="@dimen/dimens_mid"
                android:src="@mipmap/login_icon_name"/>
            <com.zcolin.gui.ZEditTextWithClear
                android:id="@+id/et_register_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dimens_mid"
                android:hint="@string/login_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimens_small">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_mid"
                android:layout_marginRight="@dimen/dimens_mid"
                android:src="@mipmap/login_icon_pwd"/>
            <com.zcolin.gui.ZEditTextWithPassword
                android:id="@+id/et_register_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dimens_mid"
                android:hint="@string/login_pwd"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimens_small"
        android:paddingBottom="@dimen/dimens_small"
        android:layout_marginLeft="@dimen/dimens_big"
        android:layout_marginRight="@dimen/dimens_big"
        android:layout_marginBottom="@dimen/dimens_big"
        android:text="@string/register_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_big"
        android:background="@drawable/radius_10_no_stroke_blue_mid_bg_shape"/>
    <Button
        android:id="@+id/btn_register_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimens_small"
        android:paddingBottom="@dimen/dimens_small"
        android:layout_marginLeft="@dimen/dimens_big"
        android:layout_marginRight="@dimen/dimens_big"
        android:text="@string/register_reset"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_big"
        android:background="@drawable/radius_10_no_stroke_blue_mid_bg_shape"/>
    
</LinearLayout>
