<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mine_details_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.pivot.myandroiddemo.activity.MineDetailsActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/transparent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/main_img_banner1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimens_big"
            android:paddingRight="@dimen/dimens_big"
            android:paddingTop="@dimen/dimens_mid"
            android:paddingBottom="@dimen/dimens_mid">
            <ImageView
                android:id="@+id/iv_mine_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_back"/>
            <!--这个layout没有其他的作用 只是为了撑开布局-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/iv_mine_punch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_punch"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/dimens_large_small"
                android:background="@drawable/radius_50_stroke_white_shape">
                <ImageView
                    android:id="@+id/iv_mine_head"
                    android:layout_width="@dimen/dimens_icon_radius_large"
                    android:layout_height="@dimen/dimens_icon_radius_large"
                    android:contentDescription="@string/head_image" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimens_mid"
                android:orientation="vertical">
                <TextView
                    style="@style/TextStyle_White_Large"
                    android:id="@+id/tv_mine_username"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:paddingBottom="@dimen/dimens_small"
                    android:gravity="bottom"/>
                <TextView
                    style="@style/TextStyle_BlackLight_Small"
                    android:id="@+id/tv_mine_user_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/dimens_small"
                    android:gravity="top"/>
                <TextView
                    style="@style/TextStyle_BlackLight_Small"
                    android:id="@+id/tv_mine_user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="ID:14498726"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_big"
        android:layout_marginTop="@dimen/dimens_big"
        android:background="@color/gray_light"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_mid"
                android:padding="@dimen/dimens_mid"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/btn_mine_travel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/dimens_icon_radius_small"
                        android:layout_height="@dimen/dimens_icon_radius_small"
                        android:layout_marginBottom="@dimen/dimens_small"
                        android:src="@mipmap/mine_icon_travel"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_travel"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_mine_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/dimens_icon_radius_small"
                        android:layout_height="@dimen/dimens_icon_radius_small"
                        android:layout_marginBottom="@dimen/dimens_small"
                        android:src="@mipmap/mine_icon_msg"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_message"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_mine_food"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/dimens_icon_radius_small"
                        android:layout_height="@dimen/dimens_icon_radius_small"
                        android:layout_marginBottom="@dimen/dimens_small"
                        android:src="@mipmap/mine_icon_food"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_food"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_mine_beauty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/dimens_icon_radius_small"
                        android:layout_height="@dimen/dimens_icon_radius_small"
                        android:layout_marginBottom="@dimen/dimens_small"
                        android:src="@mipmap/mine_icon_beauty"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_beauty"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_mid"
                android:orientation="horizontal"
                android:background="@color/gray_light">
                <TextView
                    android:id="@+id/tab_mine_plan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/dimens_mid"
                    android:paddingBottom="@dimen/dimens_mid"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:text="@string/mine_tab_plan"
                    android:textSize="@dimen/text_size_normal" />
                <TextView
                    android:id="@+id/tab_mine_food"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/dimens_mid"
                    android:paddingBottom="@dimen/dimens_mid"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:text="@string/mine_tab_food"
                    android:textSize="@dimen/text_size_normal"/>
                <TextView
                    android:id="@+id/tab_mine_beauty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/dimens_mid"
                    android:paddingBottom="@dimen/dimens_mid"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:text="@string/mine_tab_beauty"
                    android:textSize="@dimen/text_size_normal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
