<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="horizontal"
        android:padding="@dimen/dimens_mid"
        android:gravity="center_vertical"
        android:background="@mipmap/main_img_banner2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_big_big"
            android:layout_marginRight="@dimen/dimens_mid"
            android:background="@drawable/radius_30_stroke_white_shape">
            <ImageView
                android:id="@+id/iv_main_setting_user_head"
                android:layout_width="@dimen/dimens_icon_radius_normal"
                android:layout_height="@dimen/dimens_icon_radius_normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/dimens_large"
            android:orientation="vertical">
            <TextView
                style="@style/TextStyle_White_Normal"
                android:id="@+id/tv_main_setting_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_small"
                android:text="伦桑" />
            <TextView
                style="@style/TextStyle_White_Micro"
                android:id="@+id/tv_main_setting_user_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="我们间的空白格"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                style="@style/TextStyle_White_Micro"
                android:id="@+id/tv_main_setting_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/main_icon_setting_location"
                android:drawablePadding="@dimen/dimens_small_small"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="@dimen/dimens_small">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/TextStyle_BlackLight_Normal"
                android:id="@+id/tv_main_setting_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_bg_selector"
                android:drawableLeft="@mipmap/main_icon_setting_step"
                android:drawableRight="@mipmap/icon_next_arrow"
                android:drawablePadding="@dimen/dimens_small"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dimens_mid"
                android:padding="@dimen/dimens_mid"
                android:text="@string/main_setting_step"/>
            
            <TextView
                style="@style/TextStyle_BlackLight_Normal"
                android:id="@+id/tv_main_setting_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_bg_selector"
                android:drawableLeft="@mipmap/main_icon_setting_plan"
                android:drawableRight="@mipmap/icon_next_arrow"
                android:drawablePadding="@dimen/dimens_small"
                android:gravity="center_vertical"
                android:padding="@dimen/dimens_mid"
                android:text="@string/main_setting_plan"/>

            <TextView
                style="@style/TextStyle_BlackLight_Normal"
                android:id="@+id/tv_main_setting_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_bg_selector"
                android:drawableLeft="@mipmap/main_icon_setting_sport"
                android:drawableRight="@mipmap/icon_next_arrow"
                android:drawablePadding="@dimen/dimens_small"
                android:gravity="center_vertical"
                android:padding="@dimen/dimens_mid"
                android:text="@string/main_setting_sport"/>

            <TextView
                style="@style/TextStyle_BlackLight_Normal"
                android:id="@+id/tv_main_setting_calorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_bg_selector"
                android:drawableLeft="@mipmap/main_icon_setting_calorie"
                android:drawableRight="@mipmap/icon_next_arrow"
                android:drawablePadding="@dimen/dimens_small"
                android:gravity="center_vertical"
                android:padding="@dimen/dimens_mid"
                android:text="@string/main_setting_calorie"/>

            <TextView
                style="@style/TextStyle_BlackLight_Normal"
                android:id="@+id/tv_main_setting_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_item_bg_selector"
                android:drawableLeft="@mipmap/main_icon_setting_about"
                android:drawableRight="@mipmap/icon_next_arrow"
                android:drawablePadding="@dimen/dimens_small"
                android:gravity="center_vertical"
                android:padding="@dimen/dimens_mid"
                android:text="@string/main_setting_about"/>
        </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:padding="@dimen/dimens_mid"
        android:layout_marginBottom="@dimen/dimens_big">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_my_setting_weather_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>
